Fix issue with overview shadow being hidden by lyric fade top.

--- a/app/less/components/overview/overview-popup.less
+++ b/app/less/components/overview/overview-popup.less
@@ -110,10 +110,10 @@
             }
         }
 
-        &.is-song {
-            .overview.popup-wrapper {
-                margin-left: 0;
-            }
-        }
+        // &.is-song {
+        //     .overview.popup-wrapper {
+        //         margin-left: 0;
+        //     }
+        // }
     }
 }
